--- a/P1-LesBasesImperatives/Part.tex
+++ b/P1-LesBasesImperatives/Part.tex
@@ -1,7 +1,8 @@
 \part{Bases de la programmation impérative et fonctionnelle}
 
-Dans cette partie nous allons découvrir ce qu’est la programmation impérative et
-fonctionnelle et acquérir les bases de l’algorithmie.
+Dans cette partie, nous allons découvrir ce que sont
+la programmation impérative et la programmation fonctionnelle,
+et acquérir les bases de l’algorithmie.
 
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter}
