Corrects a few typos and style.

--- a/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
+++ b/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter.tex
@@ -160,7 +160,7 @@ println(/*Texte ici*/"Bonjour, bac à sable") // Parce qu'en Français c'est mie
 Remarquez que Xcode colore les commentaires d'une couleur particulière (chez moi, le vert).
 
 \section{Complément : Un quasi-interpréteur : La REPL Swift}
-Le playground, est un outil très puissant
+Un \emph{playground}, est un outil très puissant
 puisqu’il compile et exécute immédiatement
 chacune de vos instructions.
 
@@ -171,11 +171,11 @@ Il existe une autre façon de jouer avec Swift,
 un peu moins jolie mais encore plus rapide qu’un playground
 qui reste un fichier :
 La << Read Eval Print Loop >>, boucle de lecture évaluation écriture,
-basé elle aussi sur le débugger.
+basé elle aussi sur le débogueur.
 Si vous avez déjà utilisé la ligne de commande
 ou utilisé un langage interprété comme Python,
 je vous la présente ici, sinon vous pouvez sauter cette partie,
-ou vous référer au tutoriel OSX ici \url{http://openclassrooms.com/courses/domptez-votre-mac-avec-os-x-yosemite/le-terminal-dans-os-x-1},
+ou vous référer au tutoriel OSX \TSwiftUrl{http://openclassrooms.com/courses/domptez-votre-mac-avec-os-x-yosemite/le-terminal-dans-os-x-1}{ici}{Tutoriel sur OS X comportant un chapitre sur le Terminal},
 ou à tout autre tutoriel sur la ligne de commande Unix sur Mac.
 
 Ouvrez un Terminal Unix, et tapez \verb"swift".
@@ -199,7 +199,7 @@ Hello, REPL
   2> :quit
 $
 \end{verbatim}
-% Vérifier tou ça.
+% Vérifier tout ça.
 \end{listing}
 Par ce biais il est possible d'écrire des scripts, comme en python.
 
