Removes Openclassrooms reference.

--- a/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
+++ b/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
@@ -30,10 +30,12 @@ et donc toute variable a une taille définie qui est un multiple de l'octet.
 
 L'ordinateur peut aussi stocker des nombres binaires à virgule,
 comme nos nombres à virgule, avec les limitations de ces derniers.
-Je ne détaille pas ici toute la représentation, si vous voulez des détails,
-je vous renvoie à cet excellent \TSwiftUrl{http://openclassrooms.com/courses/fonctionnement-d-un-ordinateur-depuis-zero}{tutoriel}{Fonctionnement d'un ordinateur à partir de zéro --- OpenClassrooms}.
+%Je ne détaille pas ici toute la représentation, si vous voulez des détails,
+%je vous renvoie à cet excellent \TSwiftUrl{http://openclassrooms.com/courses/fonctionnement-d-un-ordinateur-depuis-zero}{tutoriel}{Fonctionnement d'un ordinateur à partir de zéro --- OpenClassrooms}.
 
-Sachez toutefois que 0,1 n'est pas codable exactement avec un nombre fini de bit,
+%Sachez toutefois que
+Par exemple
+0,1 n'est pas codable exactement avec un nombre fini de bit,
 tout comme \(\frac{1}{3}\) en numération décimale.
 
 
