--- a/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
+++ b/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
@@ -135,9 +135,9 @@ var <nom de variable> [ : <Type> ] [ = <valeur initiale> ]
 
 \item[nom de variable :]
 Un nom de variable peut être composé de n'importe quel caractère Unicode
-à part les espaces, les flèches et symboles mathématiques et les
-caractères Unicode invalides ou servant à dessiner des lignes et des boites,
-soit à peu près tout ce que vous puvez vouloir utiliser.
+à part \emph{les espaces, les flèches et symboles mathématiques et les
+caractères Unicode invalides ou servant à dessiner des lignes et des boites},
+soit à peu près tout ce que vous pouvez vouloir utiliser.
 Il ne doit pas commencer par un chiffre, ni correspondre à un mot clé du langage.
 
 
