Adds an exercice.

--- a/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
+++ b/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
@@ -322,3 +322,12 @@ Dans cette partie vous avez appris :
 \item Comment changer la valeur d'un variable.
 \item Ce qu'est une constante.
 \end{itemize}
+
+\section*{Exercice}
+\phantomsection
+\addcontentsline{toc}{section}{Exercice}
+\begin{enumerate}
+\item Déclarez une variable de type approprié pour contenir votre age, ainsi qu'une variable pour votre taille en mètres, et initialisez les avec leur valeurs de il y a un an.
+\item Mettez à jour les deux variables avec les valeurs d'aujourd'hui.
+\item Déclarez une constante pour votre année de naissance.
+\end{enumerate}
