--- a/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
+++ b/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
@@ -32,7 +32,7 @@ En effet, pour bien acquérir un cours, il faut :
 car on ne peut pas retenir et appliquer un cours sans le comprendre ;
 \item[Le reprendre] plusieurs fois,
 car une bonne mémorisation ne peut se faire qu'à ce prix ;
-\itemlLe pratiquer],
+\item[Le pratiquer],
 c'est à dire ne pas copier coller bêtement mon code sans le comprendre.
 C'est en \emph{cherchant} que l'on tire le meilleur profit d'un exercice :
 \og \emph{Tiens, j'ai essayé ça, Pourquoi cela n'a il pas marché ?} \fg{}
